working-assets/css/content-mosaic.css
.content-mosaic--wrapper {
  display: grid;
  height: auto;
  --grid-columns: 2;
  grid-template-columns: repeat(var(--grid-columns), 1fr);
  grid-auto-flow: dense;
  gap: 1.5rem;
  margin: 0.75rem auto;
  align-items: stretch;

  & .spacer {
    grid-column: 1 / -1;
    height: 1px;
    background-color: var(--c-black);
    margin: 1rem 0;
  }
}

.content-mosaic--item {
  --c-span: 1;
  --r-span: 1;
  --actual-c-span: min(var(--c-span), var(--grid-columns));
  --background: #f6f6f6;
  --alignment: left;
  background-color: var(--background);
  width: 100%;
  height: 100%;
  grid-column: span var(--actual-c-span);
  grid-row: span var(--r-span);
  position: relative;
  overflow: hidden;
  color: var(--txt-color) !important;

  & h2 {
    margin: 0;
    text-align: var(--alignment);
  }

  & .content-mosaic--content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 1lh;
    padding: min(2rem, 10%) min(2rem, 7.5%);
  }

  & .content-mosaic--overlay-link {
    position: absolute;
    inset: 0;
  }

  .content-mosaic--product-link.flag {
    font-size: var(--txt-sm);
    inset: auto -2px 5% auto;
    position: absolute;
    max-width: 95%;
    display: flex;
    align-items: center;
    z-index: 1;

    & svg {
      flex: 0 0 auto;
    }

    & .colour {
      display: none;
    }

    & .Title {
      width: 0;
      overflow: hidden;
      height: 0;

      &:hover {
        color: black !important;
      }
    }
  }

  & .content-mosaic--media {
    position: relative;
    overflow: hidden;

    &:only-child {
      height: 100%;

      & > img {
        height: 100%;
      }
    }

    &:hover,
    &:focus {
      & .Title {
        width: auto;
        display: block;
        height: auto;
        animation: product-flag 0.15s var(--bezier);

        & .title {
          width: auto;
          height: auto;
          display: block;
          color: var(--c-black);
        }
      }
    }
  }

  &.item-overlay {
    display: grid;

    & > * {
      grid-area: 1 / 1 / 2 / 2;
      text-align: left;
    }

    & img {
      height: 100%;
    }

    & .content-mosaic--content {
      width: 100%;
      height: 100%;
      text-shadow: 0 0 3px var(--c-dark-grey);
      backdrop-filter: brightness(0.8);
      transition: backdrop-filter 0.2s ease-in-out;

      &:hover {
        backdrop-filter: brightness(1);
      }
    }
  }

  &.item-50 {
    display: flex;
    flex-wrap: wrap;

    & img {
      width: 100%;
      flex: 1 1 50%;
      background-color: var(--background);

      &.img-mask {
        mask-image: linear-gradient(180deg, rgba(59, 59, 59, 100) 1%, rgba(52, 52, 52, 100) 70%, rgba(52, 52, 52, 0) 98%);
      }
    }

    & .content-mosaic--content {
      flex: 1 1 max-content;
    }
  }

  & .flag {
    position: absolute;
    left: -2px;
    top: min(30px, 5vw);
    display: flex;
    gap: 1ch;
    width: max-content;
    box-shadow: 0 0 5px var(--c-shadow);

    & svg {
      height: 1rem;
    }

    & span {
      width: max-content;
      display: block;
    }
  }

  & img {
    width: 100%;
    height: auto;
    display: block;
    object-fit: cover;
  }
}

@media screen and (min-width: 768px) {
  .content-mosaic--wrapper {
    --grid-columns: 4;
  }

  .content-mosaic--item {
    aspect-ratio: var(--actual-c-span) / var(--r-span);

    & .content-mosaic--content {
      height: 100%;
    }

    & img {
      height: 100%;
      aspect-ratio: var(--actual-c-span) / var(--r-span);
    }

    &.item-50 {
      & > * {
        max-width: 50%;
      }

      & img.img-mask {
        mask-image: linear-gradient(90deg, rgba(59, 59, 59, 100) 1%, rgba(52, 52, 52, 100) 70%, rgba(52, 52, 52, 0) 98%);
      }

      &.stack-content {
        & > * {
          max-width: 100%;
          height: auto;
        }

        & .content-mosaic--media {
          max-height: 50%;
        }

        & img {
          max-height: 100%;

          &.img-mask {
            mask-image: linear-gradient(180deg, rgba(59, 59, 59, 100) 1%, rgba(52, 52, 52, 100) 50%, rgba(52, 52, 52, 0) 97%);
          }
        }
      }
    }
  }

  & .content-mosaic--media {
    height: 100%;
  }
}

.content-mosaic--ctas {
  width: 100%;
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;

  &.cta-position--center {
    justify-content: stretch;
  }
  &.cta-position--right {
    justify-content: flex-end;
  }
}

@media screen and (max-width: 500px) {
  .content-mosaic--item:has(.content-mosaic--content) {
    grid-column: span 2 !important;
  }
}

@keyframes product-flag {
  0% {
    width: 0;
    height: 0;
  }

  60% {
    height: 0;
  }

  100% {
    width: auto;
    height: auto;
  }
}

